--- a/contactus.html
+++ b/contactus.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Posta Uruguaya</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/logo/icon_pu.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,12 +96,12 @@
                         <li class="mb-3">
                             <i class="bi bi-geo-alt-fill text-primary me-2"></i>
                             <strong>Dirección:</strong><br>
-                            Av. Siempre Viva 123, Col. Centro, León, Gto.
+                            Av. Pradera 1815. Rinconada del Sur, 37536 León de los Aldama, Gto.
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-telephone-fill text-primary me-2"></i>
                             <strong>Teléfono:</strong><br>
-                            <a href="tel:+524771234567" class="text-dark text-decoration-none">+52 477 123 4567</a>
+                            <a href="tel:+524772337271" class="text-dark text-decoration-none">+52 477 123 4567</a>
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-envelope-fill text-primary me-2"></i>
