--- a/menu.html
+++ b/menu.html
@@ -4,28 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú - Posta Uruguaya</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/logo/icon_pu.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-        /* Estilo para el nav-pills scrollable en móviles */
-        .menu-nav-scroll {
-            flex-wrap: nowrap;
-            overflow-x: auto;
-            -webkit-overflow-scrolling: touch;
-        }
-        .menu-nav-scroll .nav-link {
-            white-space: nowrap;
-        }
-        /* Ajuste para que el sticky-top funcione con el navbar principal */
-        .menu-nav {
-            top: 76px; /* Altura de la navbar principal */
-            z-index: 1019;
-        }
-    </style>
 </head>
 <body>
 
@@ -622,7 +607,7 @@
                 <div class="modal-body">
                     <div class="row g-4">
                         <div class="col-md-6">
-                            <img src="resources/img/menu-parrillada-detalle.jpg" class="img-fluid rounded mb-3" alt="Detalle Parrillada"
+                            <img src="resources/img/parrillada.webp" class="img-fluid rounded mb-3" alt="Detalle Parrillada"
                                  onerror="this.src='resources/img/placeholder-600x400.jpg'">
                         </div>
                         <div class="col-md-6">
